# vorte-web

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  ACCEPTANCE_CRITERIA.md  CHANGELOG.md  COMMANDS_CHEATSHEET.md  DEPLOY_NOW.md  DESIGN_ALIGNMENT_REPORT.md  Dockerfile  FINAL_VALIDATION_SUMMARY.md  GETTING_STARTED.md  GO_LIVE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRE_FLIGHT_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_DEPLOY.md  QUICK_START.md  QUICK_START_WINDOWS.md  README.md  README_LAUNCH.md  SHIP_CHECKLIST.md  SYSTEM_STATUS.md  VALIDATION_RESULTS.md  VALIDATION_RUNBOOK.md  VORTE_TEKNIK_DOKUM.md  Vorte-SEO-AEO-GEO-Aksiyon-Plani.docx  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  (+3 more)
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  test_task_2_1.py  test_task_2_2.py  test_task_2_3.py  test_task_3_1.py  test_task_3_2.py  test_task_3_3.py  test_task_4.py
apps/backend/app/: __init__.py  main.py
apps/backend/tests/: E2E_TESTING.md  NOTIFICATION_TESTING.md  README.md  TESTING.md  conftest.py  requirements-test.txt  test_api_endpoints.py  test_e2e_payment_flows.py  test_email_templates.py  test_idempotency.py  test_iyzico_signature.py  test_metrics.py  test_middleware.py  test_mongo_indexes.py  test_netgsm_adapter.py  test_notification_dispatcher.py  test_notification_dispatcher_worker.py  test_runner.ps1  (+16 more)
(+660 files in other folders)
